--- a/other/global.css
+++ b/other/global.css
@@ -1,6 +1,17 @@
 #separator{
 	border-top: 1px solid gray;
-	width: 80%;
-	margin-right: 10%;
-	margin-left: 10%;
 }
+
+#menu li {
+	display: inline-block;
+
+	border-left: 1px solid gray;
+	padding-left: 10px;
+	border-right: 1px solid gray;
+	padding-right: 10px;
+}
+
+/* #menu a{
+	color: black;
+	text-decoration: none;
+} */
